<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="list"
            type="com.cmsh.greendzine.response.EmployeeResponse" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:elevation="30dp"
            android:background="@color/grey1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey1"
                android:padding="20dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtEmp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emp_id"
                        android:fontFamily="@font/mulish_regular"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/empId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/mulish_regular"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toEndOf="@+id/txtEmp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/mulish_regular"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtEmp" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/mulish_regular"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toEndOf="@+id/txtEmp"
                        app:layout_constraintStart_toStartOf="@+id/empId"
                        app:layout_constraintTop_toBottomOf="@+id/empId" />

                    <TextView
                        android:id="@+id/txtDOB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dob"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/mulish_regular"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtName" />

                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/mulish_bold"
                        android:textColor="#A6690D"
                        app:layout_constraintStart_toEndOf="@+id/txtEmp"
                        app:layout_constraintStart_toStartOf="@+id/empId"
                        app:layout_constraintTop_toBottomOf="@+id/name" />

                    <TextView
                        android:id="@+id/txtRole"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/role"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/mulish_regular"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtDOB" />

                    <TextView
                        android:id="@+id/role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/mulish_bold"
                        android:textColor="@color/green1"
                        app:layout_constraintStart_toEndOf="@+id/txtEmp"
                        app:layout_constraintStart_toStartOf="@+id/empId"
                        app:layout_constraintTop_toBottomOf="@+id/dob" />

                    <TextView
                        android:id="@+id/number"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ring"
                        android:gravity="center"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>