<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context=".fragment.HomeFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/call"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/group" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/call"
                android:layout_alignParentStart="true"
                android:layout_marginStart="150dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/moptro_logo" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/imageView"
                android:layout_marginStart="-18dp"
                android:layout_marginTop="-19dp"
                android:layout_toEndOf="@+id/imageView"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="@string/_4"
                android:textColor="@color/green1"
                android:textSize="15sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/card"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_box"
                android:fontFamily="@font/mulish_regular"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/employee_productivity_dashboard"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginRight="30dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_weight="1"
                                android:fontFamily="@font/mulish_regular"
                                android:text="@string/productivity_on_monday"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/txtMonday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_weight="1"
                                android:fontFamily="@font/mulish_regular"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/green1" />

                        </LinearLayout>

                        <com.google.android.material.progressindicator.LinearProgressIndicator
                            android:id="@+id/monday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:indicatorColor="@color/green1"
                            app:trackCornerRadius="20dp"
                            app:trackThickness="20dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="30dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_weight="1"
                                android:fontFamily="@font/mulish_regular"
                                android:text="@string/productivity_on_tuesday"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/txtTuesday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_weight="1"
                                android:fontFamily="@font/mulish_regular"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/green1" />

                        </LinearLayout>

                        <com.google.android.material.progressindicator.LinearProgressIndicator
                            android:id="@+id/tuesday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:indicatorColor="@color/green1"
                            app:trackCornerRadius="20dp"
                            app:trackThickness="20dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="30dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_weight="1"
                                android:fontFamily="@font/mulish_regular"
                                android:text="@string/productivity_on_wednesday"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/txtWednesday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_weight="1"
                                android:fontFamily="@font/mulish_regular"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/green1" />

                        </LinearLayout>

                        <com.google.android.material.progressindicator.LinearProgressIndicator
                            android:id="@+id/wednesday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:indicatorColor="@color/green1"
                            app:trackCornerRadius="20dp"
                            app:trackThickness="20dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="30dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_weight="1"
                                android:fontFamily="@font/mulish_regular"
                                android:text="@string/productivity_on_thursday"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/txtThursday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_weight="1"
                                android:fontFamily="@font/mulish_regular"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/green1" />

                        </LinearLayout>

                        <com.google.android.material.progressindicator.LinearProgressIndicator
                            android:id="@+id/thursday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:indicatorColor="@color/green1"
                            app:trackCornerRadius="20dp"
                            app:trackThickness="20dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="30dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_weight="1"
                                android:fontFamily="@font/mulish_regular"
                                android:text="@string/productivity_on_friday"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/txtFriday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_weight="1"
                                android:fontFamily="@font/mulish_regular"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/green1" />

                        </LinearLayout>

                        <com.google.android.material.progressindicator.LinearProgressIndicator
                            android:id="@+id/friday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:indicatorColor="@color/green1"
                            app:trackCornerRadius="20dp"
                            app:trackThickness="20dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="30dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_weight="1"
                                android:fontFamily="@font/mulish_regular"
                                android:text="@string/productivity_on_saturday"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/txtSaturday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_weight="1"
                                android:fontFamily="@font/mulish_regular"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/green1" />

                        </LinearLayout>

                        <com.google.android.material.progressindicator.LinearProgressIndicator
                            android:id="@+id/saturday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:indicatorColor="@color/green1"
                            app:trackCornerRadius="20dp"
                            app:trackThickness="20dp" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>


    </LinearLayout>
</layout>